examples/eyre_output.run.stderr
Error: error: kaboom
 --> examples/eyre_output.rs:4:9
  |
4 |     Err(Spanned::here("kaboom"))?;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

Location:
    examples/eyre_output.rs:4:5
